--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "timer-package-demo",
+  "name": "@dinodorinna/timer-package-demo",
   "version": "1.0.2",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dinodorinna/timer-package-demo.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
